--- a/ImpactMap/ImpactMap.csproj
+++ b/ImpactMap/ImpactMap.csproj
@@ -202,8 +202,15 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Category.cs" />
+    <Compile Include="Models\DataAccessLayer.cs" />
+    <Compile Include="Models\Entity.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Investment.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Metric.cs" />
+    <Compile Include="Models\Project.cs" />
+    <Compile Include="Models\Report.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
