changed dBcontext name, added properties to models, started working on seed

--- a/ImpactMap/Web.config
+++ b/ImpactMap/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ImpactMap-20161201101901.mdf;Initial Catalog=aspnet-ImpactMap-20161201101901;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="ImpactMapDBContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\ImpactMap.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ImpactMapDbContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\ImpactMap.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
