some minor styling

--- a/ImpactMap/ImpactMap.csproj
+++ b/ImpactMap/ImpactMap.csproj
@@ -230,6 +230,8 @@
     <Compile Include="Utils\Utility.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\ImpactMap.mdf" />
+    <Content Include="App_Data\ImpactMap_log.ldf" />
     <Content Include="Content\Images\Academy_pgh.png" />
     <Content Include="Content\Images\NeighborhoodAllies_textonly.svg" />
     <Content Include="Content\bootstrap.css" />
@@ -332,7 +334,6 @@
     <Content Include="Views\Shared\_Map.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="Views\Map\" />
     <Folder Include="Views\MetricResult\" />
     <Folder Include="Views\Public\" />
