--- a/ImpactMap/ImpactMap.csproj
+++ b/ImpactMap/ImpactMap.csproj
@@ -233,11 +233,20 @@
     <Content Include="App_Data\ImpactMap.mdf" />
     <Content Include="App_Data\ImpactMap_log.ldf" />
     <Content Include="Content\Images\Academy_pgh.png" />
+    <Content Include="Content\Images\android-chrome-192x192.png" />
+    <Content Include="Content\Images\android-chrome-384x384.png" />
+    <Content Include="Content\Images\apple-touch-icon.png" />
+    <Content Include="Content\Images\browserconfig.xml" />
+    <Content Include="Content\Images\favicon-16x16.png" />
+    <Content Include="Content\Images\favicon-32x32.png" />
+    <Content Include="Content\Images\favicon.ico" />
     <Content Include="Content\Images\impact_map.png" />
+    <Content Include="Content\Images\mstile-150x150.png" />
     <Content Include="Content\Images\NeighborhoodAllies_textonly.svg" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Images\loginbg.jpg" />
+    <Content Include="Content\Images\safari-pinned-tab.svg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -247,6 +256,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Images\manifest.json" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\googlemaps.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
