--- a/ImpactMap/ImpactMap.csproj
+++ b/ImpactMap/ImpactMap.csproj
@@ -208,6 +208,7 @@
     <Compile Include="Controllers\MapController.cs" />
     <Compile Include="Controllers\MetricResultController.cs" />
     <Compile Include="Controllers\MetricsController.cs" />
+    <Compile Include="Controllers\NotificationController.cs" />
     <Compile Include="Controllers\ProjectsController.cs" />
     <Compile Include="Controllers\PublicController.cs" />
     <Compile Include="Controllers\ReportsController.cs" />
@@ -354,11 +355,13 @@
     <Content Include="Views\Shared\_Map.cshtml" />
     <Content Include="Views\Shared\_MetricsPartial.cshtml" />
     <Content Include="Views\Categories\CreateBase.cshtml" />
+    <Content Include="Views\Shared\_Notification.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\Map\" />
     <Folder Include="Views\MetricResult\" />
+    <Folder Include="Views\Notification\" />
     <Folder Include="Views\Public\" />
   </ItemGroup>
   <ItemGroup>
